--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</p>
 			<form class="pure-form" action="https://briskforms.com/go/96d8591184a90cf10eed2f0af8a7db60" method="post">
 				<fieldset class="pure-group">
-					<textarea class="pure-input-1" placeholder="How can we help? Don't forget to leave contact details!" id="commentField"></textarea>
+					<textarea class="pure-input-1" name="client-message" placeholder="How can we help? Don't forget to leave contact details!" id="commentField"></textarea>
 				</fieldset>
 				<input class="pure-input-1 pure-button pure-button-primary" value="Send" type="submit">
 			</form>
