--- a/index.html
+++ b/index.html
@@ -113,9 +113,12 @@
 		<div class="pure-g">
 			<div class="pure-u-1">
 				<div class="footer-contents">
+					<span>This site is property of:</span>
+					<br/><br/>
 					<span class="company-name">
 						BitFlip Systems Ltd
 					</span><br/>
+					Company no. 10361781, registered in England and Wales,
 					Unit 4e Enterprise Court, Farfield Park,<br/>
 					Rotherham, England,<br/>
 					S63 5DB
