--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<span class="company-name">
 						BitFlip Systems Ltd
 					</span><br/>
-					Company no. 10361781, registered in England and Wales,
+					Company no. 10361781, registered in England and Wales,<br/>
 					Unit 4e Enterprise Court, Farfield Park,<br/>
 					Rotherham, England,<br/>
 					S63 5DB
