--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
 
 </head>
 <body>
-	<div class="pure-g">
-		<div class="pure-u-1 header">
-			<img class="pure-img" src='images/logo-blackbg.png'>
-			</img>
-			<div class="halfborder"></div>
+	<header>
+		<div class="pure-g">
+			<div class="pure-u-1 header">
+				<img class="pure-img" src='images/logo-blackbg.png'>
+				</img>
+			</div>
 		</div>
-	</div>
+		<div class="pure-g">
+			<div class="pure-u-1 halfborder"></div>
+		</div>
+	</header>
+	<section id="main-content">
 	<div class="pure-g">
 		<div class="pure-u-1 pure-u-lg-1-3 column">
 			<h1>who we are</h1>
@@ -106,6 +111,7 @@
 			</form>
 		</div>
 	</div>
+	</section>
 	<footer>
 		<div class="pure-g">
 			<div class="pure-u-1 halfborder"></div>
@@ -126,5 +132,8 @@
 			</div>
 		</div>
 	</footer>
+	<script src="//static.getclicky.com/js" type="text/javascript"></script>
+	<script type="text/javascript">try{ clicky.init(100991917); }catch(e){}</script>
+	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100991917ns.gif" /></p></noscript></noscript>
 </body>
 </html>
